--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".FirstRunActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".MainMenuActivity"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
