TT追加　2017/8/31 AndroidManifestのマージ

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:screenOrientation="portrait">
         </activity>
         <activity
+            android:name=".InfoActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
             android:name=".TimeTableActivity"
             android:screenOrientation="portrait">
         </activity>
