--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,14 @@
             android:name=".InfoActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity
+            android:name=".SearchActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".KikakuAllActivity"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
