タイムテーブル、通知処理、その他全体調整

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,10 @@
             android:name=".KikakuInfoActivity"
             android:screenOrientation="portrait">
         </activity>
+
+        <receiver
+            android:name=".NotificationReceiver"
+            android:process=":remote"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
 
